--- a/src/component/homepage.css
+++ b/src/component/homepage.css
@@ -101,32 +101,23 @@
 
 .casting{  
       background-image: url('./img/castingImg.jpeg');
-      filter: sepia(1);
+      opacity:0.7 ;
       background-size: cover;
       background-position: center;
-      
+      height: 300px;
+      z-index: 1s;
 }
 
 
-.booking{
-  position: relative;
-  color: black;
-  font-weight: bold;
+.booking{  
+  background-image: url('./img/bookingImg.jpeg');
+  opacity:0.3 ;
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  z-index: 1s;
 }
 
-
-.booking::before{
-    content: "";
-      background-image: url('./img/bookingImg.jpeg');
-      background-size: cover;
-      background-position: center;
-      position: absolute;
-      top: 0px;
-      right: 0px;
-      bottom: 0px;
-      left: 0px;
-      opacity: 0.3;
-}
 
 .footer{
   font-family: 'Poppins', sans-serif;
