--- a/src/component/homepage.css
+++ b/src/component/homepage.css
@@ -138,3 +138,20 @@
   left: 45%;
   transform: translate(0%, -45%);
 }
+
+.casting-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+ 
+@media (min-width: 1024px) {
+ 
+ .casting, .booking{
+  height: 400px;
+ } 
+ 
+}
